fix: update test-app endpoint to sageattention test endpoint

--- a/test-app/index.html
+++ b/test-app/index.html
@@ -496,7 +496,7 @@
     </div>
 
     <script>
-        const endpointId = 'rsqkwxcyar9hsk';
+        const endpointId = 'xtz116gth3tc2t';
         const apiBase = `https://api.runpod.ai/v2/${endpointId}`;
 
         // DOM Elements
